--- a/skins/modern/main.css
+++ b/skins/modern/main.css
@@ -587,7 +587,7 @@ img.thumbborder {
 	list-style-type: none;
 	list-style-image: none;
 	margin: 0 1em 0 1em;
-	padding-left: 0;
+	padding: 0;
 	text-align: left;
 }
 
