--- a/skins/vector/screen.css
+++ b/skins/vector/screen.css
@@ -885,7 +885,7 @@ select {
 	list-style-type: none;
 	list-style-image: none;
 	margin-left: 0;
-	padding-left: 0;
+	padding: 0;
 	text-align: left;
 }
 #toc ul ul,
