patch from fomafix - bug33703 - remove black border-bottom-color for abbr
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk/phase3@108866 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -56,7 +56,7 @@ input[dir="rtl"] {
 abbr,
 acronym,
 .explain {
-	border-bottom: 1px dotted black;
+	border-bottom: 1px dotted;
 	cursor: help;
 }
 
