[mediawiki.action.history.diff.css] remove redundant css rule * Background color reset for tables is no longer needed per r80495 * See r80495 commitmsg for rationale for removal of the `table { backgroundL: white }` rule * Also touched in r105280
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk/phase3@108975 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/resources/mediawiki.action/mediawiki.action.history.diff.css
+++ b/resources/mediawiki.action/mediawiki.action.history.diff.css
@@ -1,11 +1,6 @@
-/*
-** Diff rendering
-*/
-table.diff,
-td.diff-otitle,
-td.diff-ntitle {
-	background-color: transparent;
-}
+/**
+ * Diff rendering
+ */
 
 td.diff-otitle,
 td.diff-ntitle {
