Table headers looked ugly without the same padding as content
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk/phase3@109520 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/resources/mediawiki/mediawiki.debug.css
+++ b/resources/mediawiki/mediawiki.debug.css
@@ -28,8 +28,11 @@
 	background-color: #f9f9f9;
 }
 
-.mw-debug table td {
+.mw-debug table td, .mw-debug table th  {
 	padding: 4px 10px;
+}
+
+.mw-debug table td {
 	border-bottom: 1px solid #eee;
 	word-wrap: break-word;
 }
