followup to r107187 - Making textarea width to be 100% in all skins
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk/phase3@109557 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/chick/main.css
+++ b/skins/chick/main.css
@@ -35,6 +35,7 @@ textarea {
 	color: black;
 	background-color: white;
 	overflow: auto;
+	width: 100%;
 }
 /* hide this from ie/mac and konq2.2 */
 @media All {
