[shared.css] Fix preferences CSS bug * Apply r109054 fix from branches/RL2 to trunk -- width: 0; doesn't work and still leaves the column open to free interpretation by the browsers. causing inconsistent widths for the "no label" columns when there are multiple of those tables on one page. * Also dropping unneeded "!important".
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk/phase3@110313 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -238,7 +238,7 @@ td.mw-submit {
 }
 
 table.mw-htmlform-nolabel td.mw-label {
-	width: 0 !important;
+	width: 1px;
 }
 
 tr.mw-htmlform-vertical-label td.mw-label {
